--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 section
 {
+    overflow: hidden;
     position: relative;
     width: 100%;
     height: 100vh;
@@ -44,7 +45,6 @@ section p
 section div img
 {
     max-width: 60%;
-    margin : 50px 0 0;
 }
 
 section div 
