--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ section
     overflow-wrap: normal;
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #000;
     padding: 100px;
     overflow:hidden ;
